Fix stretched images in body content

--- a/wp-content/themes/BB1A/assets/scss/project/_project.scss
+++ b/wp-content/themes/BB1A/assets/scss/project/_project.scss
@@ -399,6 +399,9 @@ main {
         line-height: 1.4em;
       }
     }
+    img {
+      height: auto;
+    }
   }
   .post-neighbours {
     @extend %navigation-list;
